@startuml

title __VIEWS's Class Diagram__\n

  namespace com.example.keystone_try {
    namespace views {
      class com.example.keystone_try.views.BaseActivity {
          + onOptionsItemSelected()
          # onCreate()
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace views {
      class com.example.keystone_try.views.ChartView {
          + Data : String[]
          + Title : String
          + XLabel : String[]
          + XLength : int
          + XPoint : int
          + XScale : int
          + YLabel : String[]
          + YLength : int
          + YPoint : int
          + YScale : int
          + ChartView()
          + SetInfo()
          # onDraw()
          ~ drawText()
          - YCoord()
      }
    }
  }
  

  namespace com.example.keystone_try {
    namespace views {
      class com.example.keystone_try.views.StepView {
          - back_color : int
          - back_paint : Paint
          - border_width : int
          - cover_color : int
          - cover_paint : Paint
          - currentStep : int
          - font_color : int
          - font_size : int
          - goalStep : int
          - text_paint : Paint
          + StepView()
          + StepView()
          + StepView()
          + setCurrentStep()
          + setGoalStep()
          # onDraw()
          # onMeasure()
      }
    }
  }
  

  com.example.keystone_try.views.BaseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.keystone_try.views.ChartView -up-|> android.view.View
  com.example.keystone_try.views.StepView -up-|> android.view.View


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
